--- a/Deprecated/xmas-app.iOS/Info.plist
+++ b/Deprecated/xmas-app.iOS/Info.plist
@@ -2,6 +2,14 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
   <dict>
+    <key>CFBundleDisplayName</key>
+    <string>xmas_app.iOS</string>
+    <key>CFBundleIdentifier</key>
+    <string>com.your-company.xmas_app.iOS</string>
+    <key>CFBundleShortVersionString</key>
+    <string>1.0</string>
+    <key>CFBundleVersion</key>
+    <string>1.0</string>
     <key>UIDeviceFamily</key>
     <array>
       <integer>1</integer>
@@ -21,12 +29,6 @@
       <string>UIInterfaceOrientationLandscapeRight</string>
     </array>
     <key>MinimumOSVersion</key>
-    <string>6.0</string>
-    <key>CFBundleDisplayName</key>
-    <string>xmas_app</string>
-    <key>CFBundleIdentifier</key>
-    <string>com.yourcompany.xmas_app</string>
-    <key>CFBundleVersion</key>
-    <string>1.0</string>
+    <string>7.0</string>
   </dict>
 </plist>
