--- a/Deprecated/xmas-app/xmas-app.csproj
+++ b/Deprecated/xmas-app/xmas-app.csproj
@@ -35,8 +35,10 @@
   <ItemGroup>
     <Compile Include="App.cs" />
     <Compile Include="EventSchedule.cs" />
+    <Compile Include="IBaseUrl.cs" />
     <Compile Include="MainPage.cs" />
     <Compile Include="MainTabbedPages.cs" />
+    <Compile Include="ParkMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
