--- a/xmas-app-android/.project
+++ b/xmas-app-android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Christmas In The Park</name>
+	<name>xmas-app-android</name>
 	<comment></comment>
 	<projects>
 	</projects>
