--- a/xmas-app-android/app/build.gradle
+++ b/xmas-app-android/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion "20.0.0"
 
     defaultConfig {
-        applicationId "com.example.christmasinthepark.christmasinthepark"
-        minSdkVersion 7
+        applicationId "com.xmas_app.xmas_app_android"
+        minSdkVersion 15
         targetSdkVersion 21
         versionCode 1
         versionName "1.0"
@@ -21,5 +21,4 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21.+'
 }
