--- a/xmas-app-android/app/src/main/AndroidManifest.xml
+++ b/xmas-app-android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.christmasinthepark.christmasinthepark" >
+    package="com.xmas_app.xmas_app_android" >
 
     <application
         android:allowBackup="true"
