--- a/xmas-app-android/app/src/main/AndroidManifest.xml
+++ b/xmas-app-android/app/src/main/AndroidManifest.xml
@@ -5,26 +5,24 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="Christmas in the Park app"
+        android:label="Christmas in the Park"
         android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="Christmas in the Park" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".map"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_map"
-            android:theme="@style/FullscreenTheme" >
+            android:theme="@style/FullscreenTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAP" />
-
-                <category android:name="android.intent.category.default" />
+                <action android:name="android.intent.action.MAP"/>
+                <category android:name="android.intent.category.DEFAULT"/>
             </intent-filter>
         </activity>
     </application>
