--- a/Xmas-app-Android/AndroidManifest.xml
+++ b/Xmas-app-Android/AndroidManifest.xml
@@ -3,9 +3,13 @@
     package="com.example.xmas_app"
     android:versionCode="1"
     android:versionName="1.0" >
+    
+    
+	<uses-permission android:name="android.permission.CAMERA"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
+<uses-permission android:name="android.permission.INTERNET"/>
 
+	
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
@@ -104,6 +108,16 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.zxing.client.android.CaptureActivity"
+            android:screenOrientation="landscape"
+		   android:configChanges="orientation|keyboardHidden"
+		   android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
+		   android:windowSoftInputMode="stateAlwaysHidden">
+		   <intent-filter>
+		      <action android:name="com.google.zxing.client.android.SCAN"/>
+		      <category android:name="android.intent.category.DEFAULT"/>
+		    </intent-filter>
+		</activity>
     </application>
 
 </manifest>
