--- a/Xmas-app-Android/.project
+++ b/Xmas-app-Android/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>xmas-App-Android</name>
+	<name>Xmas-app-Android</name>
 	<comment></comment>
 	<projects>
 	</projects>
